updated endpoints and swagger
