# src/main/java/com/anz/account/details/model/AccountTransactionRequest.java
@@ -1,5 +1,7 @@
 package com.anz.account.details.model;
 
+import java.io.Serializable;
+
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -8,7 +10,7 @@ import lombok.Setter;
 
 @Getter@Setter
 @AllArgsConstructor @Builder @NoArgsConstructor
-public class AccountTransactionRequest {
+public class AccountTransactionRequest implements Serializable{
 
 	private String accountNumber;
 	
